2009-12-16

	* renamed folder-group.png to group.png.
	* removed unused icons.

2009-12-16

	* src/icons/folder-group.png: new group icon.

2009-12-16

	* src/icons/folder-search.png: modified color.

2009-12-16

	* src/quick_search.[ch]
	  src/summaryview.c: show description when the entry doesn't have
	  focus.

2009-12-15

	* src/update_check.c: don't show update dialog if modal dialog exists
	  or incorporation is active.

2009-12-15

	* src/icons/folder-search.png: modified.
	* src/icons/folder-group.png: added.
	* src/stock_pixmap.[ch]
	  src/addressbook.c
	  src/foldersel.c
	  src/summaryview.c
	  src/addressadd.c
	  src/folderview.c
	  src/prefs_filter_edit.c: renamed STOCK_PIXMAP_DIR_* to
	  STOCK_PIXMAP_FOLDER_*.

2009-12-14

	* src/setup.c: changed the icon. Use name 'Mailbox' only when basename
	  is 'Mail'.

2009-12-11

	* src/setup.c: modified path display.

2009-12-11

	* src/setup.c: adjusted dialog width.
	  Append "/Mail" at the tail of selected folder.

2009-12-11

	* src/setup.c: new setup dialog which improves usability.

2009-12-11

	* src/icons/folder-close.png
	  src/icons/folder-noselect.png
	  src/icons/folder-open.png: modified folder icons.

2009-12-10

	* src/addressbook.c
	  src/foldersel.c
	  src/folderview.c: decreased spacing between icon and text.

2009-12-10

	* src/icons/folder-*.png
	  src/stock_pixmap.c: added new folder icons.

2009-12-09

	* src/prefs_common_dialog.c: adjusted layout.

2009-12-09

	* srsrc/quick_search.[ch]: added status label to display number of
	  matched messages.

2009-12-09

	* src/icons/interface.xpm: modified.

2009-12-09

	* src/foldersel.c: made New button secondary.

2009-12-09

	* src/compose.[ch]: added a menu item to request disposition
	  notification.

2009-12-08

	* src/icons/stock_book.png
	  src/stock_pixmap.c: new icon.

2009-12-08

	* libsylph/folder.c
	  src/quick_search.[ch]: added 'Last 7 days' to the quick search.

2009-12-08

	* src/addressbook.c: added Search: label.

2009-12-08
