@@ -669,3 +669,4 @@ EXPORTS
 	xml_tag_new @ 667
 	xml_truncate_buf @ 668
 	xml_unescape_str @ 669
+	strcasestr_with_skip_quote @ 670
