@@ -1,5 +1,11 @@
 2009-12-16
 
+	* libsylph/utils.[ch]: strcasestr_with_skip_quote(): added.
+	* src/compose.c: compose_reply_set_entry(): ignore case when checking
+	  mailing list post.
+
+2009-12-16
+
 	* renamed folder-group.png to group.png.
 	* removed unused icons.
 
